Testing environment displays hurt/hit boxes. Characters block each other from walking, based on the positions of their hurtboxes and as long as neither is jumping. Characters cannot move their hurtboxes past the left and right edges of the battle area. Left and right characters and their hitboxes oriented and positioned correctly.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,6 +5,16 @@ body {
 	margin: 0;
 }
 
+.hitbox {
+	background: red;
+	opacity: .5;
+}
+
+.hurtbox {
+	background: blue;
+	opacity: .5;
+}
+
 #development-menu-container {
 }
 
